fix: fix update notification showing off-center

--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -2878,6 +2878,9 @@ input:checked + .toggleSwitchSlider:before {
     height: 90px;
     width: 90px;
     margin-top: 50px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
 /* Logo container styles w/ update. */
